--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,6 @@
 spring:
   application:
     name: word-cards
-
   datasource:
     url: jdbc:postgresql://localhost:5432/wc?currentSchema=
     type: com.zaxxer.hikari.HikariDataSource
@@ -25,4 +24,6 @@ logging:
 
 server:
   port: 8080
+  servlet:
+    context-path: /api/v1
 
